--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <section class="about-text">
           <p>
-            I'm a web developer skilled in creating efficient, user-friendly applications with a strong focus on functionality and design. My expertise includes React for Front-end development, Mysql for database management, and crafting dynamic, responsive interfaces with HTML and Jinja2 templates.
+            I'm a web developer skilled in creating efficient, user-friendly applications with a strong focus on functionality and Design. My expertise includes React for Front-end development, Mysql for database management, and crafting dynamic, responsive interfaces with HTML and CSS.
           </p>
 
           <p>
